Criado a rota /produtos/form e render do ejs

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mysql": "^2.15.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.14.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node main.js",
+    "dev": "nodemon"
   },
   "author": "A gente",
   "license": "MIT"
