--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "main.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
